k8s/app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: homebudget-api
  labels:
    app: homebudget-api
spec:
  type: NodePort 
  ports:
    - port: 8081
      nodePort: 30881
  selector:
    app: homebudget-api
