k8s/front-app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: homebudget-app
  labels:
    app: homebudget-app
spec:
  type: NodePort
  ports:
    - port: 81
      targetPort: 80
  selector:
    app: homebudget-app
